Users: Correctly align the status change popup relative to the status itself

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -355,7 +355,7 @@ table {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);;
     padding: 10px;
     float: right;
-    margin-top: 6px;
+    margin-top: 5px;
     margin-left: -6px;
 }
 
